--- a/mysql_nodejs_api/public/styles/style.css
+++ b/mysql_nodejs_api/public/styles/style.css
@@ -1,7 +1,20 @@
+html{
+  scroll-behavior: smooth !important;
+}
+
 /* Remove the navbar's default rounded borders and increase the bottom margin */ 
 body{
   --color1: teal;
+  --bgCol:  #1f242b;
+  --card-transition-time: 200ms linear;
+  background-color: var(--bgCol);
+  background-color: #1f242b;
+  color: white;
+  border-color: #1f242b !important;
+  padding: 0 0.5em;
 }
+
+
 
 .navbar {
 
@@ -19,3 +32,33 @@ body{
     background-color: #f2f2f2;
     padding: 25px;
   }
+
+  .card-content:hover {
+    background: rgb(0, 0, 0, 0.8); /* Fallback color */
+    color: #f1f1f1;
+    width: 100%;
+    transition: var(--card-transition-time);
+  }
+
+ .card-content {
+  background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+  color: #f1f1f1;
+  width: 100%;
+  transition: var(--card-transition-time);
+  }
+
+  .col {
+    margin-bottom: 5px;
+  }
+
+  .data-section{
+    border-radius: 30px 30px 0 0;
+    background-color: rgb(243, 243, 243);
+    box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.7),
+                inset -2px -1px 8px 2px rgba(255, 255, 255, 0.7);
+        color: black;
+  }
+
+  /* table */
+
+  
